<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    tools:context=".presentation.activities.ReminderPermissionsActivity">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/header_layout" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?background"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?background"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                style="@style/CardBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="4dp"
                app:strokeColor="@color/dark_gray"
                app:strokeWidth="1.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView

                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/exact_alarm_permission"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView

                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/used_to_schedule_job_reminders_24_hours_before_their_deadlines_required_on_android_12_and_up"
                        android:textSize="@dimen/_11ssp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchExactAlarm"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_exact_alarm_scheduling" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Notification -->
            <com.google.android.material.card.MaterialCardView
                style="@style/CardBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView

                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/notification_permission"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView

                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/allows_the_app_to_show_job_reminder_notifications_required_on_android_13_and_higher"
                        android:textSize="14sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchNotificationPermission"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_reminder_notifications" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Boot Receiver -->
            <com.google.android.material.card.MaterialCardView
                style="@style/CardBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView

                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/boot_reschedule_permission"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:text="@string/lets_the_app_reschedule_reminders_when_your_device_restarts_you_may_need_to_allow_background_activity_for_this_app"
                        android:textSize="@dimen/_11ssp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchBootPermission"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_boot_reminder_reschedule" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>